fix: update wiki to use actual file structure
- Add wiki-structure.json with actual markdown file paths
- Replace hardcoded structure with dynamic JSON loading
- Fix file not found errors by using correct filenames
- All 88 markdown files now properly mapped

--- a/wiki/index.html
+++ b/wiki/index.html
@@ -607,204 +607,8 @@
             githubUrl: 'https://github.com/jacksoncode/jacksoncode.github.io/tree/master/wiki/library'
         };
 
-        // File system structure
-        const wikiStructure = [
-            {
-                id: '001-学习amWiki',
-                name: '学习amWiki',
-                type: 'folder',
-                children: [
-                    { id: '001-学习amWiki/001-如何开始', name: '如何开始', type: 'file' },
-                    { id: '001-学习amWiki/002-详细使用', name: '详细使用', type: 'file' },
-                    { id: '001-学习amWiki/003-网站的发布', name: '网站的发布', type: 'file' },
-                    { id: '001-学习amWiki/004-用atom写作', name: '用atom写作', type: 'file' }
-                ]
-            },
-            {
-                id: '002-文档示范',
-                name: '文档示范',
-                type: 'folder',
-                children: [
-                    { id: '002-文档示范/001-通用规范', name: '通用规范', type: 'file' },
-                    { id: '002-文档示范/002-图文排版', name: '图文排版', type: 'file' }
-                ]
-            },
-            {
-                id: '003-学习markdown',
-                name: '学习markdown',
-                type: 'folder',
-                children: [
-                    { id: '003-学习markdown/01-markdown入门', name: 'markdown入门', type: 'file' },
-                    { id: '003-学习markdown/02-markdown详细', name: 'markdown详细', type: 'file' },
-                    { id: '003-学习markdown/03-amWiki与流程图', name: 'amWiki与流程图', type: 'file' }
-                ]
-            },
-            {
-                id: '005-Jekyll使用',
-                name: 'Jekyll使用',
-                type: 'folder',
-                children: [
-                    { id: '005-Jekyll使用/001-Jekyll本地环境', name: 'Jekyll本地环境', type: 'file' },
-                    { id: '005-Jekyll使用/002-Jekyll的使用', name: 'Jekyll的使用', type: 'file' },
-                    { id: '005-Jekyll使用/003-迁移到GitHub', name: '迁移到GitHub', type: 'file' },
-                    { id: '005-Jekyll使用/004-绑定域名', name: '绑定域名', type: 'file' },
-                    { id: '005-Jekyll使用/005-Github+Jekyll添加评论支持', name: 'Github+Jekyll添加评论支持', type: 'file' },
-                    { id: '005-Jekyll使用/006-来必力评论系统', name: '来必力评论系统', type: 'file' }
-                ]
-            },
-            {
-                id: '010-Python',
-                name: 'Python',
-                type: 'folder',
-                children: [
-                    { id: '010-Python/001-Python基础', name: 'Python基础', type: 'file' },
-                    { id: '010-Python/002-Python函数', name: 'Python函数', type: 'file' },
-                    { id: '010-Python/003-Python模块', name: 'Python模块', type: 'file' },
-                    { id: '010-Python/004-Python面向对象', name: 'Python面向对象', type: 'file' },
-                    { id: '010-Python/005-Python文件操作', name: 'Python文件操作', type: 'file' },
-                    { id: '010-Python/006-Python异常处理', name: 'Python异常处理', type: 'file' },
-                    { id: '010-Python/999-Python学习资源', name: 'Python学习资源', type: 'folder', children: [
-                        { id: '010-Python/999-Python学习资源/000-廖雪峰教程', name: '廖雪峰教程', type: 'file' }
-                    ]}
-                ]
-            },
-            {
-                id: '011-HTML&CSS',
-                name: 'HTML & CSS',
-                type: 'folder',
-                children: [
-                    { id: '011-HTML&CSS/000-待添加', name: '待添加', type: 'file' },
-                    { id: '011-HTML&CSS/001-HTML基础', name: 'HTML基础', type: 'file' },
-                    { id: '011-HTML&CSS/002-CSS基础', name: 'CSS基础', type: 'file' }
-                ]
-            },
-            {
-                id: '012-JavaScript',
-                name: 'JavaScript',
-                type: 'folder',
-                children: [
-                    { id: '012-JavaScript/000-待添加', name: '待添加', type: 'file' }
-                ]
-            },
-            {
-                id: '013-Java',
-                name: 'Java',
-                type: 'folder',
-                children: [
-                    { id: '013-Java/000-待添加', name: '待添加', type: 'file' }
-                ]
-            },
-            {
-                id: '015-批处理',
-                name: '批处理',
-                type: 'folder',
-                children: [
-                    { id: '015-批处理/001-批处理基础', name: '批处理基础', type: 'file' }
-                ]
-            },
-            {
-                id: '016-Linux',
-                name: 'Linux',
-                type: 'folder',
-                children: [
-                    { id: '016-Linux/001-Linux命令', name: 'Linux命令', type: 'file' },
-                    { id: '016-Linux/002-Vim编辑器', name: 'Vim编辑器', type: 'file' }
-                ]
-            },
-            {
-                id: '030-测试专业',
-                name: '测试专业',
-                type: 'folder',
-                children: [
-                    { id: '030-测试专业/001-软件测试基础', name: '软件测试基础', type: 'file' },
-                    { id: '030-测试专业/002-测试用例设计', name: '测试用例设计', type: 'file' }
-                ]
-            },
-            {
-                id: '050-Git',
-                name: 'Git',
-                type: 'folder',
-                children: [
-                    { id: '050-Git/001-Git基础', name: 'Git基础', type: 'file' },
-                    { id: '050-Git/002-Git分支管理', name: 'Git分支管理', type: 'file' },
-                    { id: '050-Git/003-GitHub使用', name: 'GitHub使用', type: 'file' }
-                ]
-            },
-            {
-                id: '100-小技巧',
-                name: '小技巧',
-                type: 'folder',
-                children: [
-                    { id: '100-小技巧/000-使用CE无限使用百度云试用下载时间', name: '使用CE无限使用百度云试用下载时间', type: 'file' },
-                    { id: '100-小技巧/001-Windows系统图标混乱', name: 'Windows系统图标混乱', type: 'file' },
-                    { id: '100-小技巧/002-Chrome离线安装插件', name: 'Chrome离线安装插件', type: 'file' },
-                    { id: '100-小技巧/100-Gitbook常见问题', name: 'Gitbook常见问题', type: 'file' },
-                    { id: '100-小技巧/200-Npm常用命令', name: 'Npm常用命令', type: 'file' }
-                ]
-            },
-            {
-                id: '200-职场与职业规划',
-                name: '职场与职业规划',
-                type: 'folder',
-                children: [
-                    { id: '200-职场与职业规划/001-如何学习', name: '如何学习', type: 'file' }
-                ]
-            },
-            {
-                id: '201-PPT制作',
-                name: 'PPT制作',
-                type: 'folder',
-                children: [
-                    { id: '201-PPT制作/001-PPT基础', name: 'PPT基础', type: 'file' }
-                ]
-            },
-            {
-                id: '300-金融理财',
-                name: '金融理财',
-                type: 'folder',
-                children: [
-                    { id: '300-金融理财/001-理财基础', name: '理财基础', type: 'file' }
-                ]
-            },
-            {
-                id: '500-读书笔记',
-                name: '读书笔记',
-                type: 'folder',
-                children: [
-                    { id: '500-读书笔记/001-我的书单', name: '我的书单', type: 'file' },
-                    { id: '500-读书笔记/100-逻辑思维笔记', name: '逻辑思维笔记', type: 'file' },
-                    { id: '500-读书笔记/101-目标与战略', name: '目标与战略', type: 'file' },
-                    { id: '500-读书笔记/201-单核工作法图解', name: '单核工作法图解', type: 'file' },
-                    { id: '500-读书笔记/202-高效读书的习惯', name: '高效读书的习惯', type: 'file' }
-                ]
-            },
-            {
-                id: '505-得到听课',
-                name: '得到听课',
-                type: 'folder',
-                children: [
-                    { id: '505-得到听课/001-如何成为有效学习的高手', name: '如何成为有效学习的高手', type: 'file' }
-                ]
-            },
-            {
-                id: '510-知乎Live',
-                name: '知乎Live',
-                type: 'folder',
-                children: [
-                    { id: '510-知乎Live/001-前端开发', name: '前端开发', type: 'file' }
-                ]
-            },
-            {
-                id: '900-若有所思',
-                name: '若有所思',
-                type: 'folder',
-                children: [
-                    { id: '900-若有所思/100-发现bugs', name: '发现bugs', type: 'file' },
-                    { id: '900-若有所思/200-发现你的美', name: '发现你的美', type: 'file' },
-                    { id: '900-若有所思/500-重要和紧急', name: '重要和紧急', type: 'file' }
-                ]
-            }
-        ];
+        // File system structure - loaded from JSON
+        let wikiStructure = [];
 
         // State management
         let currentPath = '';
@@ -812,14 +616,28 @@
 
         // Initialize
         document.addEventListener('DOMContentLoaded', function() {
-            renderSidebar(wikiStructure);
-            setupEventListeners();
-            
-            // Check URL for direct link
-            const hash = window.location.hash.slice(1);
-            if (hash) {
-                loadDocument(hash);
-            }
+            // Load wiki structure from JSON
+            fetch('data/wiki-structure.json')
+                .then(response => response.json())
+                .then(data => {
+                    wikiStructure = data;
+                    renderSidebar(wikiStructure);
+                    setupEventListeners();
+                    
+                    // Check URL for direct link
+                    const hash = window.location.hash.slice(1);
+                    if (hash) {
+                        loadDocument(hash);
+                    }
+                })
+                .catch(error => {
+                    console.error('加载目录结构失败:', error);
+                    document.getElementById('sidebarNav').innerHTML = `
+                        <div style="padding: 20px; color: #ef4444;">
+                            <i class="fas fa-exclamation-circle"></i> 加载目录失败
+                        </div>
+                    `;
+                });
         });
 
         function renderSidebar(structure, parentElement = null, level = 0) {
