fix: enhance wiki navigation visual hierarchy
- Increase indentation for better visual hierarchy (16px → 40px → 64px → 88px)
- Add vertical guide lines for nested tree items
- Improve folder icon alignment
- Make indentation more obvious across all levels

--- a/wiki/index.html
+++ b/wiki/index.html
@@ -151,9 +151,10 @@
         }
 
         /* Indentation levels for tree toggles */
-        .tree-toggle.level-0 { padding-left: 20px; }
-        .tree-toggle.level-1 { padding-left: 36px; }
-        .tree-toggle.level-2 { padding-left: 52px; }
+        .tree-toggle.level-0 { padding-left: 16px; }
+        .tree-toggle.level-1 { padding-left: 40px; }
+        .tree-toggle.level-2 { padding-left: 64px; }
+        .tree-toggle.level-3 { padding-left: 88px; }
 
         .tree-toggle:hover {
             color: var(--primary-color);
@@ -174,6 +175,8 @@
         .tree-toggle .folder-icon {
             margin-left: 4px;
             color: #f59e0b;
+            width: 16px;
+            text-align: center;
         }
 
         .tree-children {
@@ -183,6 +186,21 @@
 
         .tree-children.expanded {
             display: block;
+        }
+
+        /* Visual guide line for tree structure */
+        .tree-children .tree-item {
+            position: relative;
+        }
+
+        .tree-children .tree-item::before {
+            content: '';
+            position: absolute;
+            left: 24px;
+            top: 0;
+            bottom: 0;
+            width: 1px;
+            background: var(--border-color);
         }
 
         .tree-link {
@@ -196,9 +214,10 @@
         }
 
         /* Indentation levels for tree links */
-        .tree-link.level-0 { padding-left: 44px; }
-        .tree-link.level-1 { padding-left: 60px; }
-        .tree-link.level-2 { padding-left: 76px; }
+        .tree-link.level-0 { padding-left: 40px; }
+        .tree-link.level-1 { padding-left: 64px; }
+        .tree-link.level-2 { padding-left: 88px; }
+        .tree-link.level-3 { padding-left: 112px; }
 
         .tree-link:hover {
             color: var(--primary-color);
